# oxi-memory-pool

./: .gitignore  CMakeLists.txt  LICENSE  MemoryPool.h  README.md  main.cpp
include/MemOx/: object_pool.hpp
tests/unit/: error_callback.cpp  exception_safety.cpp  handle_move.cpp  lifetime.cpp  pool_basic.cpp  reuse.cpp  thread_safety.cpp  thread_stress.cpp
